# viaduct-runtime

./: .gitignore  CMakeLists.txt  README.md  build.gradle.kts  settings.gradle.kts
cmake/: viaductConfig.cmake
include/viaduct/: SyncQueue.h  ViaductRuntime.h
src/: CMakeLists.txt  viaduct_runtime.cpp  viaduct_runtime.h
src/main/cpp/: Socket.cpp  ViaductRuntime.cpp
src/main/public/viaduct/: ViaductRuntime.h
tests/: CMakeLists.txt  ping_pong.cpp
